--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
-</head>
-<body>
-
-<h1>Hello world!</h1>
-<div><img src="cat.gif" alt="Hello World from Space"
-style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<p>A new line in our file!</p>
-<div><img src="gabe.jpg" alt="Hello Git" style="width:15%;max-width:640px"></div>
-
-
-</body>
-</html>
+Hello World
